fixing background alignment

--- a/newcross/login/resources/css/styles.css
+++ b/newcross/login/resources/css/styles.css
@@ -1,6 +1,5 @@
 .login-pf body {
-    background: url(../img/bg-login.jpg) repeat-x 50% 0;
-    /* position: relative; */
+    background: url(../img/bg-login.jpg) center center / cover no-repeat fixed;;
 }
 
 #kc-header-wrapper {
@@ -54,19 +53,8 @@
 div.kc-logo-text {
     background-image: url(../img/keycloak-logo-text.png);
     background-size: 100%;
-    /* width: auto; */
-    /* height: 100px;
-    width: 50%; */
 }
 
-
-
-/* @media (max-width: 875px) {
-    div.kc-logo-text {
-        height: 93px;
-        width: 430px;
-    }
-} */
 
 @media (max-width: 767px) {
 
